@@ -3,8 +3,8 @@ Author: Guillem Jover <guillem@debian.org>
 Bug-Debian: https://bugs.debian.org/304764
 Origin: vendor
 Forwarded: yes
-Last-Modified: 2019-02-28
-
+Applied-Upstream: 2.3.1+, commit:9f114efe76525ae14e7c959d4154e7b881589f18
+Last-Update: 2019-02-28
 
 ---
  man/man5/acl.5 |    1 +
