@@ -3,6 +3,7 @@ acl (2.3.1-3) UNRELEASED; urgency=medium
   * Switch to Standards-Version 4.6.2 (no changes needed).
   * Do not trim debian/changelog.
   * Make globs in debhelper fragment files more specific.
+  * Update debian/patches metadata.
 
  -- Guillem Jover <guillem@debian.org>  Thu, 12 Jan 2023 23:12:36 +0100
 
